fixed design on iphone

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -23,6 +23,8 @@
   height: 85%;
   margin-top: -2px;
   border-radius: 4px;
+  right: 0;
+  left: 0;
 }
 
 .attendee-name {
@@ -33,12 +35,16 @@
   margin-bottom: 0px;
   font-weight: bold;
   z-index: 2;
+  right: 0;
+  left: 0;
 
 }
 
 .background-name{
   position: absolute;
   bottom: 0;
+  right: 0;
+  left: 0;
   height: 11vh;
   width: 100%;
   opacity: 1;
